--- a/android.html
+++ b/android.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Android Development Resources Stack" content="">
+    <meta name="Bhavishya Garg" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>AndroMedians</title>
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans|Oswald|Julius+Sans+One' rel='stylesheet' type='text/css'>
     <link href="fonts/font-awesome/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
