Minor Code changes

--- a/android.html
+++ b/android.html
@@ -535,7 +535,7 @@
       <hr>
 
       <footer>
-        <p style="text-align:center">Developed by &copy; Google Student Club Medicaps</p>
+        <p style="text-align:center">Developed by &copy; Bhavishya Garg</p>
       </footer>
     </div> <!-- /container -->
 
