--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
  <br>
  
      <footer class="text-center josenormal green">
-        <p><a href="http://gscatmgi.wordpress.com/" target="_Blank">&copy; GSC Medicaps 2014</a></p>
+        <p><a href="http://gscatmgi.wordpress.com/" target="_Blank">&copy; Bhavishya Garg</a></p>
       </footer>
     </div> <!-- /container -->
 
