--- a/android.html
+++ b/android.html
@@ -16,7 +16,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
     <link href="css/androcustom.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
@@ -33,7 +32,7 @@
   <body>
 
     <div class="container">
-      <div class="navbar navbar-inverse blue " role="navigation">
+      <div class="navbar navbar-inverse blue navbar-fixed-top " role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -57,7 +56,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <a href="#"><img src="images/logo2.png"  align="center"  ></a>
+        <div align="center"><img src="images/logo3.png" title="AndroMedians" alt="AndroMedians" align="middle"  ></div>
       </div>
     </div>
 
