--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
   <body>
 
-    <div class="container">
-      <div class="navbar navbar-inverse blue " role="navigation">
+    <div class="navbar navbar-inverse blue navbar-fixed-top " role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -292,8 +291,8 @@
 
 
    
-
-
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
